// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render panel skew fullhd 1`] = `
<a
  class="vxteaser-panel--skew first"
>
  <img
    alt=""
    class="vxteaser-panel--skew__image"
    src="http://www.example.com/img/default.jpg"
  />
</a>
`;

exports[`render panel skew tablet 1`] = `
<a
  class="vxteaser-panel--skew first"
  style="top: -260px;"
>
  <img
    alt=""
    class="vxteaser-panel--skew__image"
    src="http://www.example.com/img/default.jpg"
  />
</a>
`;
